@@ -2,7 +2,9 @@
 
     * Fixed a bug where the tree view was catching NullPointerExceptions when
       it shouldn't have
-    * This now shows the schema completion info.
+    * The tree now shows the schema completion info.
+    * Moved actions adding attributes and removing attributes into their own
+      file
 
 05/01/2005  Ian Lewis <IanLewis@member.fsf.org>
 
